# cfd-toolkit

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml  run.py
.github/workflows/: ci.yml
examples/lmp1/: config.yml
python/cfd_toolkit/: __init__.py
python/cfd_toolkit/config/: __init__.py  base.py  config.py  constants.py  mesh.py  mixins.py  regions.py  types.py
python/cfd_toolkit/geometry/: __init__.py
python/cfd_toolkit/mesh/: __init__.py
python/cfd_toolkit/openfoam/: backend.py  backends.py
python/toussaint/: __init__.py
src/: geometry.rs  lib.rs  mesh.rs
src/geometry/: aabb.rs  ray.rs  sphere.rs  triangle.rs  vector.rs
src/mesh/: common.rs  errors.rs  face.rs  half_edge.rs  io.rs  patch.rs  point.rs  surface.rs  wavefront.rs
tests/: requirements.txt  test_geometry_vector.py
tests/geometry/: test_aabb.py  test_vector.py  test_vector3.py
