[package]
name = "cfd_toolkit"
version = "0.1.0"
edition = "2021"

[lib]
name = "cfd_toolkit"
crate-type = ["cdylib"]

[dependencies]
flate2 = { version = "1", features = ["zlib"] }
pyo3 = { version = "0.21.1", features = ["extension-module"] }
meshx = { git = "https://github.com/ajcurley/meshx.git" }

[profile.dev]
opt-level = 3
