[package]
name = "cfd_toolkit"
version = "0.1.0"
edition = "2021"

[lib]
name = "cfd_toolkit"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.1", features = ["extension-module"] }
meshx = { git = "https://github.com/ajcurley/meshx.git", rev = "0d6c5f0" }

[profile.dev]
opt-level = 3
