[package]
name = "cfd_toolkit"
version = "0.1.0"
edition = "2021"

[lib]
name = "cfd_toolkit"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.1", features = ["extension-module"] }
meshx = { git = "https://github.com/ajcurley/meshx.git", rev = "59eaf62" }

[profile.dev]
opt-level = 3
