[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "cfd-toolkit"
version = "0.1.0"
description = "Rust/Python library for managing CFD simulations"
authors = [
  {name = "Alex Curley", email = "acurley31@gmail.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://github.com/ajcurley/cfd-toolkit.git"
Issues = "https://github.com/ajcurley/cfd-toolkit/issues"

[tool.maturin]
python-source = "python"
module-name = "cfd_toolkit._cfd_toolkit_core"
bindings = "pyo3"
features = ["pyo3/extension-module"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint.per-file-ignores]
"python/cfd_toolkit/**/__init__.py" = ["F401"]
